# biga

./: .gitconfig  .gitignore  CHANGELOG.md  CHINA_STOCK_ADVANCED_STRATEGY.md  CLAUDE.md  COMPREHENSIVE_GUIDE.md  CORE_WEIGHTS_RESTRUCTURE.md  DOCS.md  ENHANCEMENT_SUMMARY.md  FINANCIAL_PREDICTION_ENHANCEMENT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MODEL_OPTIMIZATION_V3.md  MULTI_FACTOR_SCORING_GUIDE.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_V2_COMPLETE.md  PREDICTION_FIX_V3.1.md  PREDICTION_WEIGHT_CONFIG_GUIDE.md  PROFESSIONAL_PREDICTION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_BACKTEST.md  README_MULTI_TIMEFRAME_ANALYSIS.md  README_OPTIMIZATION.md  README_STOCK_PREDICTION.md  RETRAIN_FIX_SUMMARY.md  STOCK_PREDICTION_OPTIMIZATION.md  TODO_ACCURACY_TRACKING.md  WEIGHT_FIX_SUMMARY.md  WEIGHT_PROBLEMS_ANALYSIS.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
src-tauri/: .gitignore  .taurignore  Cargo.toml  stock_data.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: stock_basic.csv
src-tauri/db/: stock_data.db  stock_data.db-shm  stock_data.db-wal
src-tauri/examples/: batch_refresh.rs  check_capital_api.rs  cross_sectional.rs  factor_sweep.rs  fetch_fundamentals.rs  fetch_more_data.rs  fetch_sector_leaders.rs  fetch_universe.rs  fundamental_factors.rs  fundamental_neutral.rs  inspect_data.rs  interval_calibration.rs  neutral_cross_section.rs  pooled_ml.rs  refresh_one.rs  test_backtest.rs  test_enhanced_prediction.rs  test_historical_data.rs  test_indicators.rs  test_macd_debug.rs  (+4 more)
(+172 files in other folders)
